2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-23  Andreas Kupries  <andreask@activestate.com>

	* bench.tcl: Fixed problem with the glob patterns used to query
	* bench.man: the data array, was not matching the list quoting
	* pkgIndex.tcl: used to generate the keys. Was fine while we had
	  no keys with spaces in the interp reference, but with -pkgdir
	  this is possible, and broke. Version bumped to 0.3.1. Reported
	  by Rolf Ade.

2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* bench.tcl (::bench::run): Extended with a new option -pkgdir
	* bench.man: helping in the handling of multiple versions of a
	* pkgIndex.tcl: package to benchmark, as suggested and first
	* libbench.tcl: implemented by Rolf Ade. Moved invokation of
	  libbench to a separate helper procedure. Extended the
	  documentation. Version bumped to 0.3.

2007-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench_lang_intro.man: New files, documentation of the
	* bench_lang_spec.man: benchmark declaration language, and
	* bench_read.man: of the supporting packages.
	* bench_wcsv.man:
	* bench_wtext.man:

2007-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* libbench.tcl: Added new benchmark options -ipre, -ipost. Per
	* pkgIndex.tcl: iteration pre/post scripts, untimed. Version of
	* bench.cl:     package 'bench' is now 0.2.

2007-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench_wcsv.tcl: Fixed sorting of descriptions in text and
	* bench_wtext.tcl: csv output. Version is now 0.1.2.

2007-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bench.tcl (bench::norm): Removed 'split ,' from code, was left
	* pkgIndex.tcl: in wrongly after the rewrite of the raw
	  representation. The relevant key is a list which we can and have
	  to use directly, no split required. The fixed bug caused the